Portfolio v2: Responsiveness updates

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="description" content="Elivi GUIHO portfolio — interactive projects, experiments, and creative web work." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Elivi GUIHO" />
-    <link rel="canonical" href="https://your-project-name.vercel.app/" />
+    <link rel="canonical" href="https://eliviguiho.vercel.app/" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Elivi GUIHO - Portfolio</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Elivi GUIHO - Portfolio" />
     <meta property="og:description" content="Interactive portfolio featuring projects, experiments, and creative frontend work." />
-    <meta property="og:url" content="https://your-project-name.vercel.app/" />
-    <meta property="og:image" content="https://your-project-name.vercel.app/social-preview.svg" />
+    <meta property="og:url" content="https://eliviguiho.vercel.app/" />
+    <!-- <meta property="og:image" content="https://your-project-name.vercel.app/social-preview.svg" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Elivi GUIHO - Portfolio" />
     <meta name="twitter:description" content="Interactive portfolio featuring projects, experiments, and creative frontend work." />
-    <meta name="twitter:image" content="https://your-project-name.vercel.app/social-preview.svg" />
+    <!-- <meta name="twitter:image" content="https://your-project-name.vercel.app/social-preview.svg" /> -->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
